--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
 
-        <header class="navigation-bar">
+        <!-- <header class="navigation-bar">
             <nav>
                 <i class="fa-solid fa-terminal page-logo"></i>
 
@@ -22,7 +22,7 @@
                 <a href="#edu"><i class="fa-solid fa-info nav-anchor"></i></a> 
                <a href="#"><i class="fa-solid fa-question nav-anchor"></i></a> 
             </nav>
-        </header>
+        </header> -->
 
 
       
