--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
                         <span style="color: grey;">#</span><span style="color:pink;">include</span><span style="color:gold;">&lt;stdio.h&gt;</span><br><br>
                        <span style="color: #3c82eb;">int</span> main(<span style="color: #3c82eb;">void</span>)</br>
                         {<br>
-                            &nbsp;&nbsp;&nbsp;<span style="color: #3c82eb;">const char</span> <span style="font-size: 40px;">*</span> Name = <span style="color: #8bf444;">"Yousef Zain Aldeen"</span>;<br>
-                            &nbsp;&nbsp;&nbsp;<span style="color: #3c82eb;">const char</span> <span style="font-size: 40px;">*</span> Major = <span style="color: #8bf444;">"Computer Engineer 💻"</span>;<br>
-                            &nbsp;&nbsp;&nbsp;<span style="color: #3c82eb;">const char</span> <span style="font-size: 40px;">*</span> Status = <span style="color: #8bf444;">"Undergraduate 🎓"</span>;<br>
+                            &nbsp;&nbsp;&nbsp;<span style="color: #3c82eb;">const char</span> <span style="font-size: 1rem;">*</span> Name = <span style="color: #8bf444;">"Yousef Zain Aldeen"</span>;<br>
+                            &nbsp;&nbsp;&nbsp;<span style="color: #3c82eb;">const char</span> <span style="font-size: 1rem;">*</span> Major = <span style="color: #8bf444;">"Computer Engineer 💻"</span>;<br>
+                            &nbsp;&nbsp;&nbsp;<span style="color: #3c82eb;">const char</span> <span style="font-size: 1rem;">*</span> Status = <span style="color: #8bf444;">"Undergraduate 🎓"</span>;<br>
                             &nbsp;&nbsp;&nbsp;<span style="color: #3c82eb;">int</span> Age = <span style="color: #0edcd9;">22</span>;<br>
                             &nbsp;&nbsp;&nbsp;<span style="color:gold;">printf</span>(<span style="color: #8bf444;">"Name: %s\nMajor: %s\nStatus: &nbsp;&nbsp;&nbsp;%s\nAge: %d\n"</span>,Name,Major,Status,Age);<br>
                             &nbsp;&nbsp;&nbsp;<span style="color: #3c82eb;">return</span> <span style="color: #0edcd9;">1</span>;</br>
