--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                 <li class="certificate">
                     <img src="images/certificates/CSS.png" class="Cert-Image" alt="Cert">
 
-                    <h3 class="certificate-name">Python Essentials 2</h3>
+                    <h3 class="certificate-name">CSS (Basic)</h3>
                     <p class="certificate-date">Feb 18, 2025</p>
                     <a href="https://www.hackerrank.com/certificates/ce9e73803b87" class="certificate-link" target="_blank">Link</a>                    
    
