--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
              <a href="#home"><i class="fa-solid fa-house-chimney nav-anchor"></i></a>
             <a href="#edu"><i class="fa-solid fa-school nav-anchor"></i></a> 
            <a href="#certificates"><i class="fa-solid fa-certificate nav-anchor"></i></a> 
+           <a href="#projects"><i class="fa-solid fa-diagram-project nav-anchor"></i></a>
         </nav>
     </header>
     <script src="script.js"></script>
@@ -199,7 +200,7 @@
 
     <section class="projects-container">
         <h2 class="certificates-title">Projects 📚</h2>
-        <div class="projects-content">
+        <div class="projects-content" id="projects">
 
 
 
