--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <div class="contact-icon"><a href="https://github.com/1mental" target="_blank"><i class="fa-brands fa-github-alt"></i></a></div>
                         <div class="contact-icon"><a href="https://x.com/lostmysense" target="_blank"> <i class="fa-brands fa-x-twitter"></i></a></div>
                     </div>
-                    <p>First-class honors student in computer engineering, possessing four years of experience in programming and software development. Demonstrates a keen interest in cybersecurity, particularly in reverse engineering and web penetration testing, have a strong understanding of web technologies. Achieved a ranking of sixteenth among hundreds of thousands of students in CyberHub and secured the second position in the JIC Computer Club. Open for Coop  <span class="text-animation">opportunities.</span></p>
+                    <p>A first-class honors graduate in Computer Engineering with four years of experience in programming and software development. Passionate about cybersecurity, with a strong focus on reverse engineering and web penetration testing, coupled with a deep understanding of web technologies. Ranked 16th among hundreds of thousands of participants on CyberHub and secured 2nd place in the JIC Computer Club competition. Adept at solving complex security challenges and continuously expanding expertise in the field. Open to cooperative training opportunities to apply technical skills in real-world scenarios and contribute to innovative cybersecurity <span class="text-animation">solutions.</span></p>
                 </div>
             </aside>
             
